--- a/404.html
+++ b/404.html
@@ -1,25 +1,30 @@
 <html>
   <head>
-    <meta content='Scribble' property='og:title' />
-    <title>Scribble</title>
-    <link href='/images/fav.png' rel='shortcut icon'>
-    <link href='/stylesheets/style.css' rel='stylesheet' type='text/css' />
-    <link href='/stylesheets/responsive.css' rel='stylesheet' type='text/css' />
-    <!-- - -->
-    <script src='/javascripts/jquery.js' type='text/javascript'></script>
-    <!-- - -->
-    <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
-    <meta content='text/html; charset=utf-8' http-equiv='content-type' />
-    <meta content='http://muan.co/scribble' property='og:url' />
-    <meta content="A jekyll theme. Because I scribble." property='og:description' />
-    <meta content="blog" property="og:type" />
+    <title>Not Found - ericnish.io</title>
+    <link href="/images/favicon.ico" rel="shortcut icon">
+    <link href="/css/main.css" rel="stylesheet" type="text/css"/>
+    <meta content="ericnish.io" property="og:title"/>
+    <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
+    <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
   </head>
   <body>
-    <div class="a-c">
-      <img src="/images/404.png" alt="not found" width="160" />
-      <p>
-        <a href="/" class="main" target="_top">Back</a>
-      </p>
+    <div class="not-found">
+      <div class="middle-container">
+        <a href="/">
+          <div class="brand-logo animated infinite bounce">
+            <div class="logo-text">
+              <span class="glyphicon glyphicon-home"></span>
+            </div>
+          </div>
+        </a>
+        <h1 class="heading">ericnish.io</h1>
+        <p>Sorry, the page you requested could not be found.</p>
+        <footer>
+          <div class="footer-content">
+            <a class="button-link-large" href="/">Return &raquo;</a>
+          </div>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
