--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,10 @@
 ---
 layout: wide
 title: Projects
-subtitle: My apps and open source projects
+heading: Projects
+subheading: My apps and open source projects
 ---
+
 <div class="projects-ctrl">
   <div class="body">
     <div class="row">
