Remove title from head.html

--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@ title: Not Found
 
 <html>
   <head>
+    <title>Not Found - {{ site.title }}</title>
     {% include head.html %}
   </head>
   <body>
