Add link to GitHub

--- a/projects/index.html
+++ b/projects/index.html
@@ -18,6 +18,11 @@ subheading: My apps and open source projects
           </div>
         </article>
         {% endfor %}
+        <div class="text-center">
+          <a href="https://github.com/ericnishio?tab=repositories" class="small" target="_blank">
+            Go to my GitHub projects &raquo;
+          </a>
+        </div>
       </div>
     </div>
   </div>
