--- a/404.html
+++ b/404.html
@@ -11,12 +11,8 @@ permalink: /404.html
   <body>
     <div class="not-found">
       <div class="middle-container">
-        <a href="/">
-          <div class="brand-logo animated infinite bounce">
-            <div class="logo-text">
-              <span class="glyphicon glyphicon-home"></span>
-            </div>
-          </div>
+        <a class="brand-link" href="/" alt="{{ site.title }}">
+          <img src="/images/eric.jpg" alt="Eric Nishio" class="brand-logo animated infinite bounce" />
         </a>
         <h1 class="heading">{{ site.title }}</h1>
         <p>Sorry, the page you requested could not be found.</p>
